--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,7 @@ dependencies {
     compile("org.springframework.boot:spring-boot-devtools")
     compile group: 'nz.net.ultraq.thymeleaf', name: 'thymeleaf-layout-dialect', version: '2.3.0'
     compile group: 'com.h2database', name: 'h2', version: '1.4.199'
+    compile("org.springframework.boot:spring-boot-starter-data-jpa")
 
     testCompile("org.springframework.boot:spring-boot-starter-test")
 }
