--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,7 @@
 server.port=8080
 
 storage.path=./storage
+
+spring.datasource.url=jdbc:h2:~/test
+spring.datasource.username=sa
+spring.jpa.hibernate.ddl-auto=create-drop
